Fix #571 resolve maven deps without trailing slash and support https redirects